--- a/Who's that Pokemon.html
+++ b/Who's that Pokemon.html
@@ -10,6 +10,11 @@
     <div id = "holder">
 
     </div>
+    
+    <div id = "questions">
+
+        
+    </div>
 </body>
 <script type = "text/javascript" src = "C:\Users\Marsea\Desktop\JavaScript Practice\Who's that Pokemon\Who's that Pokemon.js"></script>
 </html>
