--- a/Who's that Pokemon.html
+++ b/Who's that Pokemon.html
@@ -4,17 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Who's that Pokemon</title>
 </head>
 <body>
-    <div id = "holder">
+    <h1>Who's that Pokemon</h1>
+    <main>
+        <div id = "scoreboard">
+            <p>1/10</p>
+        </div>
+        <section id = "pokemonHolder">
+            <h2>Pokemon</h2>
+                <figure>
+                    <img>
+                    <figcaption>
+                    </figcaption>
+                </figure>
 
-    </div>
-    
-    <div id = "questions">
+                <figure>
+                    <img>
+                    <figcaption>
+                    </figcaption>
+                </figure>
 
+                <figure>
+                    <img>
+                    <figcaption>
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <img>
+                    <figcaption>
+                    </figcaption>
+                </figure>
+        </section>
         
-    </div>
+        <section id = "questions">
+            <h2>Hints</h2>
+                <p class = "d-inline-block">one of my abilities is called <p class = "hint d-inline-block"> </p>. </p>
+                <p class = "d-inline-block">I am a <p class = "hint d-inline-block"> </p> type of Pokemon. </p>
+                <p class = "d-inline-block">You can find me in PokeMon <p class = "hint d-inline-block"> </p> </p>
+        </section>
+    </main>
 </body>
+
 <script type = "text/javascript" src = "C:\Users\Marsea\Desktop\JavaScript Practice\Who's that Pokemon\Who's that Pokemon.js"></script>
 </html>
