--- a/Who's that Pokemon.html
+++ b/Who's that Pokemon.html
@@ -5,49 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="C:\Users\Marsea\Desktop\JavaScript Practice\Who's that Pokemon\Who's that Pokemon.css" rel="stylesheet">
     <title>Who's that Pokemon</title>
 </head>
-<body>
-    <h1>Who's that Pokemon</h1>
-    <main>
-        <div id = "scoreboard">
-            <p>1/10</p>
+<body class = "fluid-container" >
+    
+    <main class = "container" >
+        <div id = "scoreboard" class = "row">
+            <h1 class = "col" >Who's that Pokemon</h1>
+            <p class = "col-1 align-self-end">1/10</p>
         </div>
-        <section id = "pokemonHolder">
-            <h2>Pokemon</h2>
-                <figure>
-                    <img>
-                    <figcaption>
+        <section id = "pokemonHolder" class = "row justify-content-center">
+            <h2 class = "text-center col-12">Pokemon</h2>
+            <div id = "figureHolder" class = "col-12 row justify-content-around">
+                <figure class = "col-3 row text-center justify-content-center">
+                    <img class = "col-10">
+                    <figcaption class = "col-12">
                     </figcaption>
                 </figure>
 
-                <figure>
-                    <img>
-                    <figcaption>
+                <figure class = "col-3 row text-center justify-content-center">
+                    <img class = "col-10">
+                    <figcaption class = "col-12">
                     </figcaption>
                 </figure>
 
-                <figure>
-                    <img>
-                    <figcaption>
+                <figure class = "col-3 row text-center justify-content-center">
+                    <img class = "col-10">
+                    <figcaption class = "col-12">
                     </figcaption>
                 </figure>
 
-                <figure>
-                    <img>
-                    <figcaption>
+                <figure class = "col-3 row text-center justify-content-center">
+                    <img class = "col-10">
+                    <figcaption class = "col-12">
                     </figcaption>
                 </figure>
+            </div>
         </section>
         
-        <section id = "questions">
+        <section id = "questions" class = "text-center">
             <h2>Hints</h2>
-                <p class = "d-inline-block">one of my abilities is called <p class = "hint d-inline-block"> </p>. </p>
-                <p class = "d-inline-block">I am a <p class = "hint d-inline-block"> </p> type of Pokemon. </p>
-                <p class = "d-inline-block">You can find me in PokeMon <p class = "hint d-inline-block"> </p> </p>
+            <p class = "d-inline-block">One of my abilities is called <p class = "hint d-inline-block"> </p>. </p>
+            <p class = "d-inline-block">I am a <p class = "hint d-inline-block"> </p> type of Pokemon. </p>
+            <p class = "d-inline-block">You can find me in Pokemon <p class = "hint d-inline-block"> </p> </p>
         </section>
     </main>
 </body>
 
 <script type = "text/javascript" src = "C:\Users\Marsea\Desktop\JavaScript Practice\Who's that Pokemon\Who's that Pokemon.js"></script>
+
 </html>
