Added a correct/incorrect "popup"
Popup occurs when an answer is selected. It is paired with a "next" button which refreshes the list onto the next question set.

--- a/Who's that Pokemon.html
+++ b/Who's that Pokemon.html
@@ -12,6 +12,18 @@
     
     <main class = "container mx-auto row justify-content-center mt-2 pb-2" >
 
+        <div id = "popUpCorrect" class = "d-none position-absolute text-center col-6 top-25">
+            <p id = "popUpText" class = "fw-bold fs-3 d-inline-block text-wrap"></p>
+            <button id = "next" class = "float-end d-inline-block">Next</button>
+            <figure class = "figurePopUp">
+                <img id = "correctImg" class = "col-5">
+                <figcaption id = "correctCaption" class = "fst-italic fs-3">
+                </figcaption>
+            </figure>
+        </div>
+
+
+
         <div id = "scoreboard" class = "row col-12 gy-1">
             <h1 class = "col" >Who's that Pokemon</h1>
             <div class = "col-1 align-self-end">
@@ -26,26 +38,26 @@
             <h2 class = "text-center col-12">Pokemon</h2>
             <div id = "figureHolder" class = "col-12 row justify-content-between">
                 <figure class = "col-3 row text-center justify-content-center">
-                    <img class = "col-10">
-                    <figcaption class = "col-12">
+                    <img class = "col-10 imgLineUp">
+                    <figcaption class = "col-12 captionLineUp">
                     </figcaption>
                 </figure>
 
                 <figure class = "col-3 row text-center justify-content-center">
-                    <img class = "col-10">
-                    <figcaption class = "col-12">
+                    <img class = "col-10 imgLineUp">
+                    <figcaption class = "col-12 captionLineUp">
                     </figcaption>
                 </figure>
 
                 <figure class = "col-3 row text-center justify-content-center">
-                    <img class = "col-10">
-                    <figcaption class = "col-12">
+                    <img class = "col-10 imgLineUp">
+                    <figcaption class = "col-12 captionLineUp">
                     </figcaption>
                 </figure>
 
                 <figure class = "col-3 row text-center justify-content-center">
-                    <img class = "col-10">
-                    <figcaption class = "col-12">
+                    <img class = "col-10 imgLineUp">
+                    <figcaption class = "col-12 captionLineUp">
                     </figcaption>
                 </figure>
             </div>
