--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="C:\Users\Marsea\Desktop\JavaScript Practice\Who's that Pokemon\Who's that Pokemon.css" rel="stylesheet">
+    <link href="./Who's that Pokemon.css" rel="stylesheet">
     <title>Who's that Pokemon</title>
 </head>
 
@@ -79,6 +79,6 @@
     </main>
 </body>
 
-<script type = "text/javascript" src = "C:\Users\Marsea\Desktop\JavaScript Practice\Who's that Pokemon\Who's that Pokemon.js"></script>
+<script type = "text/javascript" src = "./Who's that Pokemon.js"></script>
 
 </html>
