--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="./Who's that Pokemon.css" rel="stylesheet">
-    <title>Who's that Pokemon</title>
+    <link href="./Who's that Monstermon.css" rel="stylesheet">
+    <title>Who's that Monstermon</title>
 </head>
 
 <body class = "fluid-container" >
@@ -28,7 +28,7 @@
 
         <!-- container for the title (header) and score  -->
         <div id = "scoreboard" class = "row col-12 gy-1">
-            <h1 class = "col" >Who's that Pokemon</h1>
+            <h1 class = "col" >Who's that Monstermon</h1>
             <div class = "col-2 align-self-end">
                 <p id = "totalCorrect" class = "d-inline-block">1</p>
                 <p class = "d-inline-block">/</p>
@@ -37,8 +37,8 @@
         </div>
 
         <!-- container for the pokemon images -->
-        <section id = "pokemonHolder" class = "row justify-content-center col-12 gy-1">
-            <h2 class = "text-center col-12">Pokemon</h2>
+        <section id = "monstermonHolder" class = "row justify-content-center col-12 gy-1">
+            <h2 class = "text-center col-12">Monstermon</h2>
             <div id = "figureHolder" class = "col-12 row justify-content-between">
                 <figure class = "col-3 row text-center justify-content-center">
                     <img class = "col-10 imgLineUp">
@@ -71,14 +71,14 @@
             <h2>Hints</h2>
             <ul class = "list-group">
                 <li class = "list-group-item">One of my abilities is called <p class = "hint d-inline-block fst-italic"></p>.</li>
-                <li class = "list-group-item">I am a <p class = "hint d-inline-block fst-italic"></p> type Pokemon.</li>
-                <li class = "list-group-item">One of my first video game appearances is in Pokemon <p class = "hint d-inline-block fst-italic"></p>.</li>
+                <li class = "list-group-item">I am a <p class = "hint d-inline-block fst-italic"></p> type Monstermon.</li>
+                <li class = "list-group-item">One of my first video game appearances is in Monstermon <p class = "hint d-inline-block fst-italic"></p>.</li>
             </ul>
         </section>
 
     </main>
 </body>
 
-<script type = "text/javascript" src = "./Who's that Pokemon.js"></script>
+<script type = "text/javascript" src = "./Who's that Monstermon.js"></script>
 
 </html>
